# jtstopas.github.io

./: .nojekyll  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  search.json  sitemap.xml  styles.css
_site/: about.html  index.html  projects.html  robots.txt  search.json
_site/working_files/: STOPAS_Example_1.html
jtstopas.github.io/: _quarto.yml  index.qmd
working_files/: STOPAS_Example_1.html  STOPAS_Example_3.html
